Deleted console.logs and fixed home layout issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -44,7 +44,7 @@ h2 {
 .main-content {
   display: flex;
   flex-direction: column;
-  /* align-items: center; */
+  align-items: center;
 }
 
 .menu-content {
